--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,17 @@
   width: 640px;
   height: 695px;
   margin: auto;
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 15px;
+/* identical to box height, or 107% */
+
+text-align: center;
+
+color: #000000;
+
   /* text-align: center;
   margin: auto;
   /* display: grid;
@@ -36,10 +47,19 @@
 .calculator_area,
 .calculator_item {
   display: grid;
-  border: 2px solid grey;
+  /* border: 2px solid grey; */
   padding: 10px;
   justify-content: center;
   align-content: flex-start;
+}
+.calculator_area{
+  display: grid;
+  border: 2px dashed #C4C4C4;
+  padding: 10px;
+  justify-content: center;
+  width: 243px;
+  height: 480px;
+  border-radius: 6px;
 }
 
 .display,
@@ -47,16 +67,29 @@
 .numeric_keypad,
 .calculate {
   display: grid;
-  border: 2px solid grey;
-  margin-bottom: 5px;
+  /* border: 2px solid grey; */
+  margin-bottom: 16px;
   justify-content: center;
-  width: 270px;
   justify-items: stretch;
-  cursor: grab;
+  width: 240px;
+  height: 52px;
 }
 
 .operators {
   grid-template-columns: repeat(4, 1fr);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+border-radius: 4px;
+}
+
+.operators > .items {
+  width: 52px;
+  height: 48px;
+}
+
+.numeric_keypad {
+  height: 224px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+border-radius: 4px;
 }
 
 .display,
@@ -64,15 +97,43 @@
   grid-template-columns: 100%;
 }
 
+.display {
+  grid-template-columns: 100%;
+  height: 60px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+border-radius: 4px;
+}
+
+.display > .items{
+  width: 232px;
+  height: 52px;
+  background: #F3F4F6;
+}
+
+.calculate {
+  
+  height: 72px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+border-radius: 4px;
+}
+
+
+.calculate > .items{
+  background-color: #5D5FEF;
+  width: 232px;
+  height: 64px;
+}
+
 .numeric_keypad {
   grid-template-columns: repeat(3, 1fr);
 }
 
 .items {
-  border: 1px solid green;
-  margin: 5px;
-  height: 60px;
-  display: grid;
+  border: 1px solid #E2E3E5;
+  border-radius: 6px;
+  margin: 4px;
+  /* height: 60px;*/
+  display: grid; 
 }
 
 .tems:hover {
@@ -80,12 +141,20 @@
 }
 
 #\31 0 {
-  background-color: rgb(128, 139, 240);
+  /* background-color: rgb(128, 139, 240); */
   grid-column: 1 / 3;
 }
 .items > div {
-  align-self: center;
+  align-self:center;
   justify-self: center;
+}
+
+.display > .items > div {
+  align-self:center;
+  justify-self: end;
+  font-weight: 800;
+font-size: 36px;
+margin-right: 8px;
 }
 
 .line {
@@ -93,7 +162,7 @@
   display: grid;
   border: 1px solid grey;
   margin-bottom: 5px;
-  width: 270px;
+  width: 243px;
   grid-template-columns: 100%;
 }
 .line > .items {
