--- a/src/App.css
+++ b/src/App.css
@@ -72,13 +72,13 @@ color: #000000;
   justify-content: center;
   justify-items: stretch;
   width: 240px;
-  height: 52px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
+border-radius: 4px;
 }
 
 .operators {
   grid-template-columns: repeat(4, 1fr);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
+  height: 56px;
 }
 
 .operators > .items {
@@ -88,8 +88,7 @@ border-radius: 4px;
 
 .numeric_keypad {
   height: 224px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .display,
@@ -98,10 +97,7 @@ border-radius: 4px;
 }
 
 .display {
-  grid-template-columns: 100%;
   height: 60px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
 }
 
 .display > .items{
@@ -111,10 +107,7 @@ border-radius: 4px;
 }
 
 .calculate {
-  
   height: 72px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06), 0px 4px 6px rgba(0, 0, 0, 0.1);
-border-radius: 4px;
 }
 
 
@@ -124,9 +117,6 @@ border-radius: 4px;
   height: 64px;
 }
 
-.numeric_keypad {
-  grid-template-columns: repeat(3, 1fr);
-}
 
 .items {
   border: 1px solid #E2E3E5;
@@ -136,9 +126,9 @@ border-radius: 4px;
   display: grid; 
 }
 
-.tems:hover {
+/* .tems:hover {
   border: 2px solid blue;
-}
+} */
 
 #\31 0 {
   /* background-color: rgb(128, 139, 240); */
