--- a/src/calculator/Calculator.css
+++ b/src/calculator/Calculator.css
@@ -32,6 +32,13 @@ button {
   border: 1px solid #e2e3e5;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+span {
+  margin-left: 5px;
 }
 
 .container {
@@ -60,6 +67,27 @@ button {
   width: 243px;
   height: 480px;
   border-radius: 6px;
+}
+
+.image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 252px;
+  gap: 4px;
+}
+
+h3 {
+  font-size: 14px;
+  color: #5d5fef;
+  margin: 0;
+  margin-top: 8px;
+  line-height: 17px;
+}
+
+.image > div {
+  font-size: 12px;
+  color: #6b7280;
 }
 
 .display,
