--- a/src/calculator/Constructor.css
+++ b/src/calculator/Constructor.css
@@ -53,19 +53,20 @@ span {
 }
 
 .calculator_area,
-.calculator_item {
+.buttonsBlock_area {
   display: grid;
   padding: 10px;
   justify-content: center;
   align-content: flex-start;
-}
-.calculator_area {
-  display: grid;
-  border: 2px dashed #c4c4c4;
-  padding: 10px;
-  justify-content: center;
   width: 243px;
   height: 480px;
+}
+.calculator_area {
+  /* display: grid; */
+  border: 2px dashed #c4c4c4;
+  padding: 10px;
+  /* justify-content: center; */
+  
   border-radius: 6px;
 }
 
@@ -109,7 +110,7 @@ h3 {
   height: 56px;
 }
 
-.operators > .items {
+.operators > .calc_Button {
   width: 52px;
   height: 48px;
 }
@@ -128,7 +129,7 @@ h3 {
   height: 60px;
 }
 
-.display > .items {
+.display > .calc_Button {
   width: 232px;
   height: 52px;
   background: #f3f4f6;
@@ -138,20 +139,20 @@ h3 {
   height: 72px;
 }
 
-.calculate > .items {
+.calculate > .calc_Button {
   background-color: #5d5fef;
   width: 232px;
   height: 64px;
 }
 
-.items {
+.calc_Button {
   border: 1px solid #e2e3e5;
   border-radius: 6px;
   margin: 4px;
   display: grid;
 }
 
-#\31 0 {
+.calc_Button.\30  {
   grid-column: 1 / 3;
 }
 .items > div {
@@ -159,7 +160,7 @@ h3 {
   justify-self: center;
 }
 
-.display > .items > div {
+.display > .calc_Button > div {
   align-self: center;
   justify-self: end;
   font-weight: 800;
@@ -175,7 +176,7 @@ h3 {
   width: 243px;
   grid-template-columns: 100%;
 }
-.line > .items {
+.line > .calc_Button {
   border: none;
 }
 
