--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -18,4 +18,9 @@ span {
 [disabled] {
   cursor: not-allowed;
   opacity: 0.7;
+  background: #f3f4f6;
+
+  svg > path {
+    stroke: #4D5562;
+  }
 }
