--- a/src/scss/Constructor.scss
+++ b/src/scss/Constructor.scss
@@ -36,6 +36,12 @@
     height: 695px;
     text-align: center;
     margin: auto;
+
+    &.runtime {
+      grid-template-columns: none;
+      justify-content: end;
+      margin-left: -65px;
+    }
   }
 }
 
@@ -54,6 +60,11 @@
   opacity: 0.5;
 }
 
+.calculator_area > [draggable="false"] {
+  cursor: default;
+  
+}
+
 .calculator_area {
   border: 2px dashed #c4c4c4;
   padding: 10px;
@@ -62,7 +73,8 @@
   &:hover {
     background-color: #f0f9ff;
   }
-  
+
+
 &.not_empty {
   border: none;
   &:hover {
@@ -143,6 +155,13 @@
 
 .display {
   height: 60px;
+  &[draggable="false"] > .calc_Button {
+    cursor: no-drop;
+  }
+
+  &.hover:hover {
+    cursor:default;
+  }
   .calc_Button {
     width: 232px;
     height: 52px;
@@ -154,6 +173,7 @@
       font-weight: 800;
       font-size: 36px;
       margin-right: 8px;
+      color: #111827;
     }
   }
 }
@@ -163,6 +183,8 @@
   border: 2px solid $activ_color;
   cursor: pointer;
 }
+
+
 
 .calc_Button.display.hover > div {
   font-size: 19px;
@@ -175,17 +197,27 @@
 .calculate {
   height: 72px;
 
+  &[draggable="false"] > .calc_Button:not(.hover) {
+    cursor: no-drop;
+  }
+
+  
+
   .calc_Button {
     background-color: #5d5fef;
     width: 232px;
     height: 64px;
+
+    &.hover:hover  {
+      cursor:pointer;
+    }
   }
 }
 
 .line {
   height: 1px;
   display: grid;
-  border: 1px solid grey;
+  border: 1px solid #5D5FEF;
   margin-bottom: 5px;
   width: 243px;
   grid-template-columns: 100%;
