--- a/src/component/Constructor/Constructor.scss
+++ b/src/component/Constructor/Constructor.scss
@@ -26,7 +26,7 @@
     margin: 20px 65px 20px auto;
   }
 
-  .constructor_area {
+  .layout {
     display: grid;
     grid-template-columns: 50% 50%;
     gap: 20px;
