--- a/src/component/Button/Button.scss
+++ b/src/component/Button/Button.scss
@@ -1,26 +1,44 @@
-button {
-  width: 133px;
-  height: 36px;
-  background: #ffffff;
-  border: 1px solid #e2e3e5;
-  border-radius: 5px;
-  cursor: pointer;
+@import '../../scss/variables';
+
+.buttonSwitcher {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  padding: 1px;
   justify-content: center;
-  user-select: none;
-}
+  width: 243px;
+  height: 38px;
+  left: 20px;
+  top: 20px;
+  background: $display_backgr;
+  border-radius: 6px;
+  margin: 20px 65px 20px auto;
 
-span {
-  margin-left: 5px;
-}
+  &__enableCalculator,
+  &__disableCalculator {
+    width: 133px;
+    height: 36px;
+    background: #ffffff;
+    border: 1px solid #e2e3e5;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
 
-[disabled] {
-  cursor: not-allowed;
-  opacity: 0.7;
-  background: #f3f4f6;
+    span {
+      margin-left: 5px;
+    }
 
-  svg > path {
-    stroke: #4D5562;
+    &[disabled] {
+      cursor: not-allowed;
+      opacity: 0.7;
+      background: #f3f4f6;
+
+      svg > path {
+        stroke: #4d5562;
+      }
+    }
   }
 }
