--- a/src/component/Button/Button.scss
+++ b/src/component/Button/Button.scss
@@ -26,14 +26,20 @@
     align-items: center;
     justify-content: center;
     user-select: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 15px;
+    color: #4d5562;
 
     span {
       margin-left: 5px;
     }
 
     &[disabled] {
+      border: none;
       cursor: not-allowed;
-      opacity: 0.7;
       background: #f3f4f6;
 
       svg > path {
